# Youtube_Player

./: setup.cfg  youtube_player.py
youtube_player/: main.py  player.py  track_queue.py  voice.py  youtube_bot.py
youtube_player/config/: parameters.py  youtube_player.ini
youtube_player/helpers/: download_manager.py  downloader.py  helper_funcs.py
youtube_player/startup/: configure_logging.py  read_config.py
youtube_player/tracks/: attachment_track.py  track.py  youtube_track.py
youtube_player/validation/: config_validation.py
