[metadata]
name = youtube_player
version = 3.0.2
summary = A Discord bot that takes a Youtube URL or attachment and plays it in a voice channel.
home_page = https://github.com/JSheare/Youtube_Player
author = Jacob Shearer
author_email = jacob.shearer6912@gmail.com

[options]
packages = 
	youtube_player
    youtube_player/config
    youtube_player/helpers
    youtube_player/startup
    youtube_player/tracks
    youtube_player/validation
python_requires = >=3.10
install_requires =
    discord.py[voice]
    platformdirs
    pydantic
    yt-dlp

[options.entry_points]
console_scripts =
    youtube_player = youtube_player.main:main

[options.package_data]
youtube_player =
    config/youtube_player.ini
	